syntax = "proto3";

package checklist.db;

option go_package = ".;pb";

import "google/protobuf/timestamp.proto";

service DatabaseService {
  // Методы для пользователей
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
  rpc AuthenticateUser(AuthenticateUserRequest) returns (AuthenticateUserResponse) {}
  
  // Методы для задач
  rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse) {}
  rpc GetTasks(GetTasksRequest) returns (GetTasksResponse) {}
  rpc DeleteTask(DeleteTaskRequest) returns (DeleteTaskResponse) {}
  rpc CompleteTask(CompleteTaskRequest) returns (CompleteTaskResponse) {}
}

// Сообщения для пользователей
message CreateUserRequest {
  string name = 1;
  string username = 2;
  string password = 3;
}

message GetUserRequest {
  string user_id = 1;
}

message AuthenticateUserRequest {
  string username = 1;
  string password = 2;
}

message CreateUserResponse {
  string id = 1;
  string name = 2;
  string username = 3;
  google.protobuf.Timestamp created_at = 4;
}

message GetUserResponse {
  string id = 1;
  string name = 2;
  string username = 3;
  google.protobuf.Timestamp created_at = 4;
}

message AuthenticateUserResponse {
  bool success = 1;
  string user_id = 2;
  string message = 3;
}

// Сообщения для задач
message CreateTaskRequest {
  string title = 1;
  string description = 2;
  string user_id = 3;
}

message GetTasksRequest {
  string user_id = 1;
  bool include_completed = 2;
  int32 limit = 3;
  int32 offset = 4;
}

message DeleteTaskRequest { 
  string id = 1;
  string user_id = 2;
}

message CompleteTaskRequest { 
  string id = 1;
  string user_id = 2;
}

message CreateTaskResponse {
  string id = 1;
  string user_id = 2;
  string title = 3;
  string description = 4;
  bool completed = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp completed_at = 7;
}

message GetTasksResponse {
  repeated DbTask tasks = 1;
  int32 total_count = 2;
}

message DeleteTaskResponse {
  bool success = 1;
  string message = 2;
}

message CompleteTaskResponse {
  string id = 1;
  bool completed = 2;
  google.protobuf.Timestamp completed_at = 3;
}

message DbTask {
  string id = 1;
  string user_id = 2;
  string title = 3;
  string description = 4;
  bool completed = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp completed_at = 7;
}

// Новое сообщение для пользователя
message User {
  string id = 1;
  string name = 2;
  string username = 3;
  google.protobuf.Timestamp created_at = 4;
}